--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="styles/style.css"/>
-  <title>HANMASTORE FUN BANLIST</title>
+  <title>MR.JUEVES FUN LEAGUE BANLIST</title>
 </head>
 <body>
   <h1>
