--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
       <img src="images/AP/AP41.jpg">
       <img src="images/AP/AP42.jpg">
       <img src="images/AP/AP43.jpg">
-      <img src="images/AP/AP44.jpg">
     </div>
   </div>
   <h2>
@@ -106,15 +105,10 @@
       <img src="images/CP/M/CP17.jpg">
       <img src="images/CP/M/CP18.jpg">
       <img src="images/CP/M/CP19.jpg">
-      <img src="images/CP/M/CP20.jpg">
     </div>
   </div>
   <div class="fila">
     <div class="columna">
-      <img src="images/CP/M/CP21.jpg">
-      <img src="images/CP/M/CP22.jpg">
-      <img src="images/CP/M/CP23.jpg">
-      <img src="images/CP/M/CP24.jpg">
       <img src="images/CP/S/CP1.jpg">
       <img src="images/CP/S/CP2.jpg">
       <img src="images/CP/S/CP3.jpg">
@@ -132,6 +126,7 @@
   </h2>
   <div class="fila">
     <div class="columna">
+
       <img src="images/CL/M/CL1.jpg">
       <img src="images/CL/M/CL2.jpg">
       <img src="images/CL/M/CL3.jpg">
@@ -142,10 +137,12 @@
       <img src="images/CL/M/CL8.jpg">
       <img src="images/CL/M/CL9.jpg">
       <img src="images/CL/M/CL10.jpg">
+
     </div>
   </div>
   <div class="fila">
     <div class="columna">
+
       <img src="images/CL/M/CL11.jpg">
       <img src="images/CL/M/CL12.jpg">
       <img src="images/CL/M/CL13.jpg">
@@ -161,6 +158,17 @@
   </div>
   <div class="fila">
     <div class="columna">
+
+      <img src="images/CL/M/CL21.jpg">
+      <img src="images/CL/M/CL22.jpg">
+      <img src="images/CL/M/CL23.jpg">
+      <img src="images/CL/M/CL24.jpg">
+      
+    </div>
+  </div>
+  <div class="fila">
+    <div class="columna">
+
       <img src="images/CL/S/CL1.jpg">
       <img src="images/CL/S/CL2.jpg">
       <img src="images/CL/S/CL3.jpg">
@@ -171,6 +179,7 @@
       <img src="images/CL/S/CL8.jpg">
       <img src="images/CL/S/CL9.jpg">
       <img src="images/CL/S/CL10.jpg">
+
     </div>
   </div>
   <div class="fila">
@@ -186,11 +195,21 @@
       <img src="images/CL/S/CL18.jpg">
       <img src="images/CL/S/CL19.jpg">
       <img src="images/CL/S/CL20.jpg">
+
     </div>
   </div>
   <div class="fila">
     <div class="columna">
+
       <img src="images/CL/S/CL21.jpg">
+      <img src="images/CL/S/CL22.jpg">
+
+
+    </div>
+  </div>
+  <div class="fila">
+    <div class="columna">
+
       <img src="images/CL/T/CL1.jpg">
       <img src="images/CL/T/CL2.jpg">
       <img src="images/CL/T/CL3.jpg">
@@ -199,11 +218,12 @@
       <img src="images/CL/T/CL6.jpg">
       <img src="images/CL/T/CL7.jpg">
       <img src="images/CL/T/CL8.jpg">
+
     </div>
   </div>
-  </div>
-  <div class="fila">
+    <div class="fila">
     <div class="columna">
+
     </div>
   </div>
   <h2>
@@ -211,15 +231,10 @@
   </h2>
   <div class="fila">
     <div class="columna">
-      <img src="images/CSL/M/CSL1.jpg">
-      <img src="images/CSL/M/CSL2.jpg">
-      <img src="images/CSL/M/CSL3.jpg">
-      <img src="images/CSL/M/CSL4.jpg">
+
       <img src="images/CSL/S/CSL1.jpg">
       <img src="images/CSL/S/CSL2.jpg">
       <img src="images/CSL/S/CSL3.jpg">
-      <img src="images/CSL/S/CSL4.jpg">
-      <img src="images/CSL/S/CSL5.jpg">
       <img src="images/CSL/T/CSL1.jpg">
       
     </div>
